code cleanup (up to Java 15)