@@ -26,14 +26,11 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.channels.FileChannel;
 import java.nio.file.Paths;
-import java.security.CodeSource;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.EventListener;
 import java.util.List;
-import java.util.Optional;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
@@ -59,11 +56,9 @@ import com.google.inject.Injector;
 import net.sourceforge.fullsync.FullSync;
 import net.sourceforge.fullsync.Launcher;
 import net.sourceforge.fullsync.Preferences;
-import net.sourceforge.fullsync.Profile;
 import net.sourceforge.fullsync.ProfileManager;
 import net.sourceforge.fullsync.RuntimeConfiguration;
 import net.sourceforge.fullsync.Synchronizer;
-import net.sourceforge.fullsync.TaskTree;
 import net.sourceforge.fullsync.Util;
 import net.sourceforge.fullsync.event.ScheduledProfileExecution;
 import net.sourceforge.fullsync.event.ShutdownEvent;
@@ -81,7 +76,7 @@ public class Main implements Launcher { // NO_UCD
 		options.addOption("V", "version", false, "display the version and exit"); //$NON-NLS-1$ //$NON-NLS-2$
 		options.addOption("m", "minimized", false, "starts fullsync gui in system tray "); //$NON-NLS-1$ //$NON-NLS-2$
 
-		Option profilesFile = Option.builder("P") //$NON-NLS-1$
+		var profilesFile = Option.builder("P") //$NON-NLS-1$
 			.longOpt("profiles-file") //$NON-NLS-1$
 			.desc("uses the specified file instead of profiles.xml")
 			.hasArg()
@@ -89,7 +84,7 @@ public class Main implements Launcher { // NO_UCD
 			.build();
 		options.addOption(profilesFile);
 
-		Option run = Option.builder("r") //$NON-NLS-1$
+		var run = Option.builder("r") //$NON-NLS-1$
 			.longOpt("run") //$NON-NLS-1$
 			.desc("run the specified profile and then exit FullSync")
 			.hasArg()
@@ -97,7 +92,7 @@ public class Main implements Launcher { // NO_UCD
 			.build();
 		options.addOption(run);
 
-		Option daemon = Option.builder("d") //$NON-NLS-1$
+		var daemon = Option.builder("d") //$NON-NLS-1$
 			.longOpt("daemon") //$NON-NLS-1$
 			.desc("disables the gui and runs in daemon mode with scheduler")
 			.hasArg(false)
@@ -107,12 +102,12 @@ public class Main implements Launcher { // NO_UCD
 	}
 
 	private static void printHelp() {
-		HelpFormatter formatter = new HelpFormatter();
+		var formatter = new HelpFormatter();
 		formatter.printHelp(85, "fullsync", "", options, "", true); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
 	}
 
 	public static String getConfigDir() {
-		String configDir = System.getProperty("net.sourceforge.fullsync.configDir"); //$NON-NLS-1$
+		var configDir = System.getProperty("net.sourceforge.fullsync.configDir"); //$NON-NLS-1$
 		if (null == configDir) {
 			configDir = System.getenv("XDG_CONFIG_HOME"); //$NON-NLS-1$
 		}
@@ -120,7 +115,7 @@ public class Main implements Launcher { // NO_UCD
 			configDir = System.getProperty("user.home") + File.separator + ".config"; //$NON-NLS-1$ //$NON-NLS-2$
 		}
 		configDir = configDir + File.separator + "fullsync" + File.separator; //$NON-NLS-1$
-		File dir = new File(configDir);
+		var dir = new File(configDir);
 		if (!dir.exists()) {
 			dir.mkdirs();
 		}
@@ -132,8 +127,8 @@ public class Main implements Launcher { // NO_UCD
 	}
 
 	private static void backupFile(final File old, final File current, final String backupName) throws IOException {
-		try (FileInputStream fis = new FileInputStream(old); FileOutputStream fos = new FileOutputStream(current)) {
-			try (FileChannel in = fis.getChannel(); FileChannel out = fos.getChannel()) {
+		try (var fis = new FileInputStream(old); var fos = new FileOutputStream(current)) {
+			try (var in = fis.getChannel(); var out = fos.getChannel()) {
 				in.transferTo(0, in.size(), out);
 			}
 			old.renameTo(new File(backupName));
@@ -147,7 +142,7 @@ public class Main implements Launcher { // NO_UCD
 
 	public static void startup(String[] args, Launcher launcher) throws Exception {
 		initOptions();
-		String configDir = getConfigDir();
+		var configDir = getConfigDir();
 		CommandLineParser parser = new DefaultParser();
 		CommandLine line = null;
 
@@ -161,7 +156,7 @@ public class Main implements Launcher { // NO_UCD
 		}
 
 		if (line.hasOption('V')) {
-			System.out.println(String.format("FullSync version %s", Util.getFullSyncVersion())); //$NON-NLS-1$
+			System.out.printf("FullSync version %s%n", Util.getFullSyncVersion()); //$NON-NLS-1$
 			System.exit(0);
 		}
 
@@ -185,11 +180,11 @@ public class Main implements Launcher { // NO_UCD
 			profilesFile = configDir + FullSync.PROFILES_XML;
 			upgradeLegacyProfilesXmlLocation(profilesFile);
 		}
-		final String prefrencesFile = configDir + FullSync.PREFERENCES_PROPERTIES;
-		final Injector injector = Guice.createInjector(new FullSyncModule(line, prefrencesFile));
-		final RuntimeConfiguration rtConfig = injector.getInstance(RuntimeConfiguration.class);
+		final var prefrencesFile = configDir + FullSync.PREFERENCES_PROPERTIES;
+		final var injector = Guice.createInjector(new FullSyncModule(line, prefrencesFile));
+		final var rtConfig = injector.getInstance(RuntimeConfiguration.class);
 		injector.getInstance(ProfileManager.class).setProfilesFileName(profilesFile);
-		final ScheduledExecutorService scheduledExecutorService = injector.getInstance(ScheduledExecutorService.class);
+		final var scheduledExecutorService = injector.getInstance(ScheduledExecutorService.class);
 		final EventListener deadEventListener = new EventListener() {
 			private final Logger logger = LoggerFactory.getLogger("DeadEventLogger"); //$NON-NLS-1$
 
@@ -200,12 +195,12 @@ public class Main implements Launcher { // NO_UCD
 				}
 			}
 		};
-		final EventBus eventBus = injector.getInstance(EventBus.class);
+		final var eventBus = injector.getInstance(EventBus.class);
 		eventBus.register(deadEventListener);
 
-		final Semaphore sem = new Semaphore(0);
+		final var sem = new Semaphore(0);
 		Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-			Logger logger = LoggerFactory.getLogger(Main.class);
+			var logger = LoggerFactory.getLogger(Main.class);
 			logger.debug("shutdown hook called, starting orderly shutdown"); //$NON-NLS-1$
 			eventBus.post(new ShutdownEvent());
 			scheduledExecutorService.shutdown();
@@ -218,20 +213,19 @@ public class Main implements Launcher { // NO_UCD
 			logger.debug("shutdown hook finished, releasing main thread semaphore"); //$NON-NLS-1$
 			sem.release();
 		}));
-		if (rtConfig.isDaemon().orElse(false).booleanValue() || rtConfig.getProfileToRun().isPresent()) {
+		if (rtConfig.isDaemon().orElse(false) || rtConfig.getProfileToRun().isPresent()) {
 			finishStartup(injector);
 			sem.acquireUninterruptibly();
-			System.exit(0);
 		}
 		else {
 			launcher.launchGui(injector);
-			System.exit(0);
 		}
+		System.exit(0);
 	}
 
 	private static void upgradeLegacyProfilesXmlLocation(String profilesFile) throws IOException {
-		File newProfiles = new File(profilesFile);
-		File oldProfiles = new File(FullSync.PROFILES_XML);
+		var newProfiles = new File(profilesFile);
+		var oldProfiles = new File(FullSync.PROFILES_XML);
 		if (!newProfiles.exists()) {
 			if (!oldProfiles.exists()) {
 				// on windows FullSync 0.9.1 installs itself into %ProgramFiles%\FullSync while 0.10.0 installs itself into
@@ -245,24 +239,24 @@ public class Main implements Launcher { // NO_UCD
 	}
 
 	private static void upgradeLegacyPreferencesLocation(String configDir) throws IOException {
-		File newPreferences = new File(configDir + FullSync.PREFERENCES_PROPERTIES);
-		File oldPreferences = new File(FullSync.PREFERENCES_PROPERTIES);
+		var newPreferences = new File(configDir + FullSync.PREFERENCES_PROPERTIES);
+		var oldPreferences = new File(FullSync.PREFERENCES_PROPERTIES);
 		if (!newPreferences.exists() && oldPreferences.exists()) {
 			backupFile(oldPreferences, newPreferences, "preferences_old.properties"); //$NON-NLS-1$
 		}
 	}
 
 	public static void finishStartup(Injector injector) {
-		RuntimeConfiguration rt = injector.getInstance(RuntimeConfiguration.class);
-		Preferences preferences = injector.getInstance(Preferences.class);
-		Scheduler scheduler = injector.getInstance(Scheduler.class);
-		ProfileManager profileManager = injector.getInstance(ProfileManager.class);
-		Synchronizer synchronizer = injector.getInstance(Synchronizer.class);
-		Optional<String> profile = rt.getProfileToRun();
+		var rt = injector.getInstance(RuntimeConfiguration.class);
+		var preferences = injector.getInstance(Preferences.class);
+		var scheduler = injector.getInstance(Scheduler.class);
+		var profileManager = injector.getInstance(ProfileManager.class);
+		var synchronizer = injector.getInstance(Synchronizer.class);
+		var profile = rt.getProfileToRun();
 		profileManager.loadProfiles();
-		if (profile.isPresent()) {
-			handleRunProfile(synchronizer, profileManager, profile.get());
-		}
+
+		profile.ifPresent(s -> handleRunProfile(synchronizer, profileManager, s));
+
 		if (rt.isDaemon().orElse(false)) {
 			daemonSchedulerListener = injector.getInstance(DaemonSchedulerListener.class);
 			scheduler.start();
@@ -273,17 +267,17 @@ public class Main implements Launcher { // NO_UCD
 	}
 
 	private static void handleRunProfile(Synchronizer synchronizer, ProfileManager profileManager, String profileName) {
-		Profile p = profileManager.getProfileByName(profileName);
-		int errorlevel = 1;
+		var p = profileManager.getProfileByName(profileName);
+		var errorlevel = 1;
 		if (null != p) {
-			TaskTree tree = synchronizer.executeProfile(p, false);
+			var tree = synchronizer.executeProfile(p, false);
 			errorlevel = synchronizer.performActions(tree);
 			p.setLastUpdate(new Date());
 			profileManager.save();
 		}
 		else {
 			// FIXME: this should be on STDERR really... but that is "abused" as the log output.
-			System.out.println(String.format("Error: The profile with the name %s couldn't be found.", profileName));
+			System.out.printf("Error: The profile with the name %s couldn't be found.%n", profileName);
 		}
 		System.exit(errorlevel);
 	}
@@ -298,13 +292,13 @@ public class Main implements Launcher { // NO_UCD
 
 		@Subscribe
 		private void profileExecutionScheduled(ScheduledProfileExecution scheduledProfileExecution) {
-			Profile profile = scheduledProfileExecution.getProfile();
-			TaskTree tree = synchronizer.executeProfile(profile, false);
+			var profile = scheduledProfileExecution.getProfile();
+			var tree = synchronizer.executeProfile(profile, false);
 			if (null == tree) {
 				profile.setLastError(1, "An error occured while comparing filesystems.");
 			}
 			else {
-				int errorLevel = synchronizer.performActions(tree);
+				var errorLevel = synchronizer.performActions(tree);
 				if (errorLevel > 0) {
 					profile.setLastError(errorLevel, "An error occured while copying files.");
 				}
@@ -317,22 +311,22 @@ public class Main implements Launcher { // NO_UCD
 
 	@Override
 	public void launchGui(Injector injector) throws Exception {
-		String osName = System.getProperty("os.name").toLowerCase(); //$NON-NLS-1$
-		String os = "unknown"; //$NON-NLS-1$
-		if (-1 == System.getProperty("os.arch").indexOf("64")) { //$NON-NLS-1$ //$NON-NLS-2$
+		var osName = System.getProperty("os.name").toLowerCase(); //$NON-NLS-1$
+		var os = "unknown"; //$NON-NLS-1$
+		if (!System.getProperty("os.arch").contains("64")) { //$NON-NLS-1$ //$NON-NLS-2$
 			throw new Exception("32 bit Operating Systems are not supported anymore!");
 		}
-		if (-1 != osName.indexOf("linux")) { //$NON-NLS-1$
+		if (osName.contains("linux")) { //$NON-NLS-1$
 			os = "gtk.linux"; //$NON-NLS-1$
 		}
-		else if (-1 != osName.indexOf("windows")) { //$NON-NLS-1$
+		else if (osName.contains("windows")) { //$NON-NLS-1$
 			os = "win32.win32"; //$NON-NLS-1$
 		}
-		else if (-1 != osName.indexOf("mac")) { //$NON-NLS-1$
+		else if (osName.contains("mac")) { //$NON-NLS-1$
 			os = "cocoa.macosx"; //$NON-NLS-1$
 		}
-		CodeSource cs = getClass().getProtectionDomain().getCodeSource();
-		String libDirectory = cs.getLocation().toURI().toString().replaceAll("^(.*)/[^/]+\\.jar$", "$1/"); //$NON-NLS-1$ //$NON-NLS-2$
+		var cs = getClass().getProtectionDomain().getCodeSource();
+		var libDirectory = cs.getLocation().toURI().toString().replaceAll("^(.*)/[^/]+\\.jar$", "$1/"); //$NON-NLS-1$ //$NON-NLS-2$
 
 		List<URL> jars = new ArrayList<>();
 		jars.add(new URL(libDirectory + "net.sourceforge.fullsync-fullsync-assets.jar")); //$NON-NLS-1$
@@ -341,10 +335,10 @@ public class Main implements Launcher { // NO_UCD
 		jars.add(new URL(libDirectory + String.format("org.eclipse.platform-org.eclipse.swt.%s.x86_64.jar", os))); //$NON-NLS-1$
 
 		// instantiate an URL class-loader with the constructed class-path and load the UI
-		URLClassLoader cl = new URLClassLoader(jars.toArray(new URL[jars.size()]), Main.class.getClassLoader());
+		var cl = new URLClassLoader(jars.toArray(new URL[0]), Main.class.getClassLoader());
 		Thread.currentThread().setContextClassLoader(cl);
 		Class<?> cls = cl.loadClass("net.sourceforge.fullsync.ui.GuiMain"); //$NON-NLS-1$
-		Launcher guiMain = (Launcher) cls.getDeclaredConstructor(new Class<?>[] {}).newInstance();
+		var guiMain = (Launcher) cls.getDeclaredConstructor().newInstance();
 		guiMain.launchGui(injector);
 	}
 }
